# lawd-bot

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/bot/: main.py
src/bot/middleware/: auth.py
src/bot/routers/: signup.py  std.py
src/bot/states/: auth.py
src/common/: __init__.py  logger.py  logging_config.py
src/exceptions/: __init__.py
src/utils/: password_manager.py
